--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
   <app-root></app-root>
   
   <!-- footer section start -->
-<div class="footer_section layout_padding">
+<!-- <div class="footer_section layout_padding">
   <div class="container">
       <div class="row">
           <div class="col-lg-3 col-sm-6">
@@ -86,7 +86,7 @@
           </div>
       </div>
   </div>
-</div>
+</div> -->
 <!-- footer section end -->
 <!-- copyright section start -->
 <div class="copyright_section">
